2004-09-07  Mark D. Baushke  <mdb@cvshome.org>

	* server.c (server_updated): Deal with cvs -n update -jt1 -jt2
	"protocol error: uncounted data discarded" problem.
	* sanity.sh (join7): New test for this case.
	
2004-09-04  Derek Price  <derek@ximbiot.com>

	* socket-client.c (socket_client_initialize): Pass new args to
	buf_initialize.

2004-09-04  Derek Price  <derek@ximbiot.com>

	Silence `gcc -Wall'.

	* buffer.c (buf_initialize): Remove unnecessary typecasts by using
	size_t instead of int or bool as args.  
	* buffer.c, import.c, log-buffer.c, ms-buffer.c, zlib.c: Change all
	callers.
	* buffer.h, cvs.h: Update protos.
	* client.c, ls.c, main.c, rcs.c, root.c, server.c: Remove unused vars,
	add parens, as requested by `gcc -Wall'.

2004-09-04  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (writeproxy-noredirect): Between "Set" and
	"expand-modules" are the optional Kerberos-encrypt, Gssapi-encrypt
	and Gssapi-authenticate entries. Use ${DOTSTAR} to deal with
	these optionally configured requests.

2004-09-04  Mark D. Baushke  <mdb@cvshome.org>

	* import.c (expand_at_signs): Typecasting for fwrite results.
	* log-buffer.c (log_buffer_input, log_buffer_output,
	log_buffer_initialize): Ditto.

	* log-buffer.c (log_buffer_initialize): Protect reference to
	fatal_errors.

	* parseinfo.c (parse_config): Protect reference to PrimaryServer
	using #ifdef PROXY_SUPPORT.

	* ls.c (ls_fileproc): Remove unused variables.
	* subr.c (increment_revnum): Ditto.
	* vers_ts.c (time_stamp): Ditto.

2004-09-03  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_checkin), commit.c (remove_file): Accept UPDATE_DIR
	argument and use it to output full relative path on commit.
	* rcs.h (RCS_checkin): Update prototype.
	* checkin.c, commit.c, import.c: Change all callers.
	* sanity.sh: Adjust to compensate.

2004-09-03  Derek Price  <derek@ximbiot.com>

	* client.c (call_in_directory): Change passed in function to accept